--- a/client_side/css/index.css
+++ b/client_side/css/index.css
@@ -5,25 +5,34 @@ body {
     margin: 0;
     padding: 20px;
 }
+nav{
+    text-align: right;
+}
+.head{
+    text-align: center;
+    font-size: 24px;
+    font-weight: bold;
+}
+.container2{
+    width: 80vw;
+    margin: auto;
+}
 
 a {
     text-decoration: none;
     color: inherit;
 }
 
-.card-container {
-    display: flex;
-    flex-direction: column;
+#card-container {
+    margin-top: 50px;
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr 1fr;
     align-items: center;
+    gap: 25px;
 }
 
-.card-container > div:first-child {
-    font-size: 24px;
-    font-weight: bold;
-    margin-bottom: 20px;
-}
 
-.card {
+#card {
     background-color: #fff;
     border-radius: 12px;
     box-shadow: 0px 4px 12px rgba(0, 0, 0, 0.1);
@@ -33,24 +42,24 @@ a {
     text-align: center;
 }
 
-.card:hover {
+#card:hover {
     transform: translateY(-10px);
 }
 
-.card img {
+#card img {
     width: 180px;
     height: 180px;
     border-radius: 50%;
     margin-top: 20px;
 }
 
-.card div {
+#card div {
     padding: 10px;
 }
 
-.card div div {
+#card div div {
     margin-bottom: 10px;
-    font-size: 18px;
+    font-size: 20px;
     font-weight: 500;
 }
 
@@ -70,7 +79,7 @@ button:hover {
 }
 
 @media (max-width: 768px) {
-    .card {
+    #card {
         width: 100%;
     }
 }
